# python-project-52

./: .coveragerc  .env.sample  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
task_manager/: .codeclimate.yml  mixins.py  models.py  settings.py  urls.py  views.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_label_created_at_label_name_alter_label_table.py  0003_alter_label_table.py  0004_alter_label_name.py
task_manager/labels/tests/: test_crud_labels.py  test_label_delete_protection.py
task_manager/migrations/: 0001_initial.py  0002_delete_user.py  0003_initial.py  0004_remove_user_full_name_remove_user_name_and_more.py
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_table.py  0003_alter_status_name.py
task_manager/statuses/tests/: test_crud_statuses.py  test_status_delete_protection.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0003_alter_task_table.py  (+1 more)
task_manager/templates/: base.html  delete.html  form.html  index.html  navbar.html
task_manager/tests/: base.py  test_crud_labels.py  test_crud_statuses.py  test_crud_tasks.py  test_crud_users.py  test_delete_protection.py  test_filter_tasks.py  test_login_access.py
task_manager/user/: models.py  urls.py  views.py
task_manager/users/: forms.py  models.py  urls.py  views.py
tests/: test_crud.py
(+37 files in other folders)
